Prevent horizontal scroll on mobile

--- a/source/stylesheets/_component__nav.scss
+++ b/source/stylesheets/_component__nav.scss
@@ -15,8 +15,10 @@
     align-items: center;
     display: flex;
     padding: 0 $grid-unit-4;
-    @media all and (max-width: 500px) {
-      max-width: 60px;
+
+    @media all and (max-width: $nav-breakpoint) {
+      width: 60px;
+      min-width: 60px;
       overflow: hidden;
       padding: 0 $grid-unit * 2;
     }
@@ -27,7 +29,7 @@
     flex: 3;
     justify-content: flex-end;
     margin: 0 $grid-unit-2;
-    @media all and (max-width: 500px) {
+    @media all and (max-width: $nav-breakpoint) {
       justify-content: center;
     }
 
@@ -44,6 +46,9 @@
       padding: $grid-unit-2;
       text-decoration: none;
       transition: border .2s;
+      @media all and (max-width: $nav-breakpoint) {
+        padding: $grid-unit-2 $grid-unit;
+      }
 
       &:hover {
         box-shadow: inset 0 -3px 0 $check-blue;
