--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   min-width: 310px;
+  overflow-x: hidden;
 }
 
 // 2. Meedan.com global styles
